--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "git@github.com:SipPetros/Sceyt_Chat.git",
   "name": "chat-app",
   "version": "0.1.0",
   "private": true,
@@ -10,11 +11,13 @@
     "@types/node": "^16.18.89",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "sass": "^1.72.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -24,13 +27,16 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "linter:check": "eslint 'src/**/*.{js,jsx}' --quiet",
     "linter": "eslint 'src/**/*.{js,jsx}' --quiet --fix"
   },
